[project]
name = "logistics-ops-reviewer-agent"
version = "0.1.0"
description = "Freight bill matching and human-in-the-loop approval API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "langgraph>=0.2.60",
  "langchain-openai>=0.2.0",
  "httpx>=0.27.0",
  "networkx>=3.3",
  "rapidfuzz>=3.9.0",
  "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
